@@ -1,3 +1,12 @@
+2009-12-03  Marcus Brinkmann  <marcus@g10code.de>
+
+	* assuan-logging.c: (log_cats): New static variable.
+	(TEST_LOG_CAT): New macro.
+	(_assuan_log_handler): Check log category.
+	(assuan_set_assuan_log_stream): Check ASSUAN_DEBUG for logging
+	categories.
+	(assuan_set_log_stream): Call assuan_set_assuan_log_stream.
+
 2009-12-02  Marcus Brinkmann  <marcus@g10code.de>
 
 	* Makefile.am (common_sources): Remove assuan-client.c.
